--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,8 @@
-
-#NODE_ENV=development
+NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb+srv://jishan11:jishan@odoo-hackathon.vzdtooy.mongodb.net/?retryWrites=true&w=majority&appName=odoo-hackathon
-JWT_SECRET=my_super_secret_key_for_rewear_project_2024
+MONGODB_URI=mongodb://localhost:27017/rewear
+JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRE=7d
+CLOUDINARY_CLOUD_NAME=your_cloudinary_name
+CLOUDINARY_API_KEY=your_cloudinary_key
+CLOUDINARY_API_SECRET=your_cloudinary_secret
